Rename the memory column in JvmMemoryReportService to make more clear that it is not the current memory per thread but the cumulative allocated memory.
See: https://stackoverflow.com/questions/36176593/will-threadmxbeangetthreadallocatedbytes-return-size-of-allocated-memory-or-obj